Fix profession badges spacing: remove margin-left, increase gap

--- a/src/styles/EmployeeLayout.css
+++ b/src/styles/EmployeeLayout.css
@@ -231,7 +231,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 4vw;
   padding: 0 0.5vw;
 }
 .employCard-masterJob p{
